--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -20,11 +20,11 @@
 	<!-- Keep aligned with MSBuild extras' default ExtrasUwpMetaPackageVersion -->
 	<PackageReference Update="Uno.SourceGenerationTasks" Version="3.0.0-dev.21" />
 	<PackageReference Update="Uno.SourceGeneration" Version="3.0.0-dev.21" />
-	<PackageReference Update="Uno.Core" Version="2.0.0" />
-	<PackageReference Update="Uno.Core.Build" Version="2.0.0" />
+	<PackageReference Update="Uno.Core" Version="2.1.0" />
+	<PackageReference Update="Uno.Core.Build" Version="2.1.0" />
 	<PackageReference Update="Uno.Diagnostics.Eventing" Version="1.0.4" />
-	<PackageReference Update="Uno.Wasm.Bootstrap" Version="1.3.4" />
-	<PackageReference Update="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+	<PackageReference Update="Uno.Wasm.Bootstrap" Version="2.0.0-dev.125" />
+	<PackageReference Update="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.125" />
 	<PackageReference Update="xamarin.build.download" Version="0.4.11" PrivateAssets="all" />
 	<PackageReference Update="MSTest.TestAdapter" Version="2.1.2" />
 	<PackageReference Update="MSTest.TestFramework" Version="2.1.1" />
